Added some comments for insights

--- a/Classification/Classifications.ipynb
+++ b/Classification/Classifications.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 129,
    "id": "e8cb1af5-5046-4a8e-b482-1d56df6c1d52",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "\"\"\" Import the classifier \"\"\"\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -15,23 +17,25 @@
     "from sklearn.ensemble import HistGradientBoostingClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
+    "\"\"\" Helper function \"\"\"\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import make_classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 130,
    "id": "084faed3-eccc-441e-982a-00740e4b40a0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" Create synthetic data \"\"\"\n",
     "X, y = make_classification(n_samples=200, n_features=5, n_informative=3, n_classes=2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 131,
    "id": "25e10318-7a7c-4b34-8ba7-a444b2f2c2ba",
    "metadata": {},
    "outputs": [
@@ -44,12 +48,13 @@
     }
    ],
    "source": [
+    "\"\"\" View the first row of X \"\"\"\n",
     "print(X[0,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 132,
    "id": "89f16d6d-edb1-43c2-9c39-47634ddad88d",
    "metadata": {},
    "outputs": [
@@ -67,16 +72,18 @@
     }
    ],
    "source": [
+    "\"\"\" The class or label \"\"\"\n",
     "print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 133,
    "id": "07e5cc5e-723c-4005-90f1-56c722691b6b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" The models inside the dictionary datatype or a key-value pair data structure \"\"\"\n",
     "MODELS_DICT = {\n",
     "    \"dt\": DecisionTreeClassifier(),      \n",
     "    \"lr\": LogisticRegression(),          \n",
@@ -89,11 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 134,
    "id": "c89c8227-7c2a-4945-b548-1e9bbc06ab4d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" The class for the model \"\"\"\n",
     "class Model:\n",
     "    def __init__(self, data_X, data_y, model, test_size=0.2, random_state=42):\n",
     "        # print(data_X.shape)\n",
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 135,
    "id": "027eb20b-6ceb-4f6e-87a1-648dfe137c57",
    "metadata": {},
    "outputs": [
@@ -123,21 +131,28 @@
        "(1, 5)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# X = np.array([[0,0], [1,1]])\n",
-    "# y = np.array([0,1])\n",
+    "\"\"\" Unseen data: one row \"\"\"\n",
     "new_x = np.array([[0,1,0.5,2,0.3]])\n",
     "new_x.shape"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b6123a5-3290-41fa-b725-228b3c3deafa",
+   "metadata": {},
+   "source": [
+    "### Below are the models in action "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 136,
    "id": "ff91e57c-2301-4adf-885e-b567ff25cf7a",
    "metadata": {},
    "outputs": [
@@ -150,6 +165,7 @@
     }
    ],
    "source": [
+    "\"\"\" Decision Trees \"\"\"\n",
     "model = Model(X, y, MODELS_DICT['dt'])\n",
     "new_y = model.predict(new_x)\n",
     "accuracy = model.accuracy()\n",
@@ -158,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 137,
    "id": "2c755447-190c-4d6d-a82a-573bace8594b",
    "metadata": {},
    "outputs": [
@@ -171,6 +187,7 @@
     }
    ],
    "source": [
+    "\"\"\" Logistic Regression \"\"\"\n",
     "model = Model(X, y, MODELS_DICT['lr'])\n",
     "new_y = model.predict(new_x)\n",
     "accuracy = model.accuracy()\n",
@@ -179,8 +196,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 138,
    "id": "dc346014-97c9-4cda-bdbb-1cf4669e24be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: 1; Accuracy: 0.95;\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" Random Forest \"\"\"\n",
+    "model = Model(X, y, MODELS_DICT['rf'])\n",
+    "new_y = model.predict(new_x)\n",
+    "accuracy = model.accuracy()\n",
+    "print(f'Prediction: {new_y[0]}; Accuracy: {accuracy:.2f};')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "9f5e4c88-3a9a-4ace-93ec-0d5b63ce4cef",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +231,8 @@
     }
    ],
    "source": [
-    "model = Model(X, y, MODELS_DICT['rf'])\n",
+    "\"\"\" Support Vector Machine \"\"\"\n",
+    "model = Model(X, y, MODELS_DICT['svc'])\n",
     "new_y = model.predict(new_x)\n",
     "accuracy = model.accuracy()\n",
     "print(f'Prediction: {new_y[0]}; Accuracy: {accuracy:.2f};')"
@@ -200,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 142,
    "id": "173a49ec-49e8-47c5-ace0-8c10578c7784",
    "metadata": {},
    "outputs": [
@@ -213,6 +253,7 @@
     }
    ],
    "source": [
+    "\"\"\" Gradient Boosting Machine Classifier \"\"\"\n",
     "model = Model(X, y, MODELS_DICT['hgb'])\n",
     "new_y = model.predict(new_x)\n",
     "accuracy = model.accuracy()\n",
@@ -221,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 143,
    "id": "c6100855-7176-48a5-86e8-d538f7ade5f2",
    "metadata": {},
    "outputs": [
@@ -234,6 +275,7 @@
     }
    ],
    "source": [
+    "\"\"\" Multi-Layer Perceptron \"\"\"\n",
     "model = Model(X, y, MODELS_DICT['mlp'])\n",
     "new_y = model.predict(new_x)\n",
     "accuracy = model.accuracy()\n",
