initial commit of clustering algorithm

--- a/Classification/Classifications.ipynb
+++ b/Classification/Classifications.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "ff91e57c-2301-4adf-885e-b567ff25cf7a",
    "metadata": {},
    "outputs": [
@@ -263,15 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "a74ed454-4de4-48b1-8a1c-b89c64a6c85c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.explain_local(new_x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "080f19b1-50d0-470c-b030-bc26dcbbd0b3",
    "metadata": {},
    "outputs": [
@@ -279,7 +281,7 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id='iE3J4PO56I3A9MD7BWBGE'>\n",
+       "<div id='iT4Y12ZR8RII5ETV95WSZ'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -290,15 +292,15 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 0.196875, \"outValue\": 0.19687500000000008, \"link\": \"identity\", \"featureNames\": [\"Feature 1\", \"Feature 2\", \"Feature 3\", \"Feature 4\", \"Feature 5\"], \"features\": {\"0\": {\"effect\": 0.10487766350015924, \"value\": 0.0}, \"1\": {\"effect\": 0.0344919056817292, \"value\": 1.0}, \"2\": {\"effect\": -0.15719805822632552, \"value\": 0.5}, \"3\": {\"effect\": 0.21419808164384782, \"value\": 2.0}, \"4\": {\"effect\": -0.19636959259941067, \"value\": 0.3}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('iE3J4PO56I3A9MD7BWBGE')\n",
+       "    document.getElementById('iT4Y12ZR8RII5ETV95WSZ')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x28593eb7c40>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x28593eaebf0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,6 +358,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "55960f92-482c-4c68-b70c-5c4f8c2a88e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id='iBEHBE1Y4SOE06S0DCR8A'>\n",
+       "<div style='color: #900; text-align: center;'>\n",
+       "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
+       "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
+       "  user you must also trust this notebook (File -> Trust notebook). If you are viewing\n",
+       "  this notebook on github the Javascript has been stripped for security. If you are using\n",
+       "  JupyterLab this error is because a JupyterLab extension has not yet been written.\n",
+       "</div></div>\n",
+       " <script>\n",
+       "   if (window.SHAP) SHAP.ReactDom.render(\n",
+       "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 0.196875, \"outValue\": 0.19687500000000008, \"link\": \"identity\", \"featureNames\": [\"Feature 1\", \"Feature 2\", \"Feature 3\", \"Feature 4\", \"Feature 5\"], \"features\": {\"0\": {\"effect\": 0.10487766350015924, \"value\": 0.0}, \"1\": {\"effect\": 0.0344919056817292, \"value\": 1.0}, \"2\": {\"effect\": -0.15719805822632552, \"value\": 0.5}, \"3\": {\"effect\": 0.21419808164384782, \"value\": 2.0}, \"4\": {\"effect\": -0.19636959259941067, \"value\": 0.3}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
+       "    document.getElementById('iBEHBE1Y4SOE06S0DCR8A')\n",
+       "  );\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<shap.plots._force.AdditiveForceVisualizer at 0x28593eae500>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shap.force_plot(model.explainer.expected_value[0], model.calculate_shap(new_x)[0][0], new_x[0], feature_names=[f\"Feature {i+1}\" for i in range(new_x.shape[1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 470,
    "id": "dc346014-97c9-4cda-bdbb-1cf4669e24be",
    "metadata": {},
@@ -399,6 +439,44 @@
     "accuracy = model.accuracy()\n",
     "print(f'Prediction: {new_y[0]}; Accuracy: {accuracy:.2f}; Precision: {model.precision():.2f};')\n",
     "model.explain_global()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "eefa9a5b-928b-4dc8-99ed-c47f5d5279fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id='iDOL5SL587X408DIW3WXQ'>\n",
+       "<div style='color: #900; text-align: center;'>\n",
+       "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
+       "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
+       "  user you must also trust this notebook (File -> Trust notebook). If you are viewing\n",
+       "  this notebook on github the Javascript has been stripped for security. If you are using\n",
+       "  JupyterLab this error is because a JupyterLab extension has not yet been written.\n",
+       "</div></div>\n",
+       " <script>\n",
+       "   if (window.SHAP) SHAP.ReactDom.render(\n",
+       "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 0.196875, \"outValue\": 0.19687500000000008, \"link\": \"identity\", \"featureNames\": [\"Feature 1\", \"Feature 2\", \"Feature 3\", \"Feature 4\", \"Feature 5\"], \"features\": {\"0\": {\"effect\": 0.10487766350015924, \"value\": 0.0}, \"1\": {\"effect\": 0.0344919056817292, \"value\": 1.0}, \"2\": {\"effect\": -0.15719805822632552, \"value\": 0.5}, \"3\": {\"effect\": 0.21419808164384782, \"value\": 2.0}, \"4\": {\"effect\": -0.19636959259941067, \"value\": 0.3}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
+       "    document.getElementById('iDOL5SL587X408DIW3WXQ')\n",
+       "  );\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<shap.plots._force.AdditiveForceVisualizer at 0x28593eae920>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shap.force_plot(model.explainer.expected_value[0], model.calculate_shap(new_x)[0][0], new_x[0], feature_names=[f\"Feature {i+1}\" for i in range(new_x.shape[1])])"
    ]
   },
   {
@@ -450,6 +528,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "ecbb5154-ac00-4688-9f30-caa8e1b8f8f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id='i2MOYFMS4CGQB5J1HB3ES'>\n",
+       "<div style='color: #900; text-align: center;'>\n",
+       "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
+       "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
+       "  user you must also trust this notebook (File -> Trust notebook). If you are viewing\n",
+       "  this notebook on github the Javascript has been stripped for security. If you are using\n",
+       "  JupyterLab this error is because a JupyterLab extension has not yet been written.\n",
+       "</div></div>\n",
+       " <script>\n",
+       "   if (window.SHAP) SHAP.ReactDom.render(\n",
+       "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 0.196875, \"outValue\": 0.19687500000000008, \"link\": \"identity\", \"featureNames\": [\"Feature 1\", \"Feature 2\", \"Feature 3\", \"Feature 4\", \"Feature 5\"], \"features\": {\"0\": {\"effect\": 0.10487766350015924, \"value\": 0.0}, \"1\": {\"effect\": 0.0344919056817292, \"value\": 1.0}, \"2\": {\"effect\": -0.15719805822632552, \"value\": 0.5}, \"3\": {\"effect\": 0.21419808164384782, \"value\": 2.0}, \"4\": {\"effect\": -0.19636959259941067, \"value\": 0.3}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
+       "    document.getElementById('i2MOYFMS4CGQB5J1HB3ES')\n",
+       "  );\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<shap.plots._force.AdditiveForceVisualizer at 0x28593eae0e0>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shap.force_plot(model.explainer.expected_value[0], model.calculate_shap(new_x)[0][0], new_x[0], feature_names=[f\"Feature {i+1}\" for i in range(new_x.shape[1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 472,
    "id": "173a49ec-49e8-47c5-ace0-8c10578c7784",
    "metadata": {},
@@ -479,6 +595,44 @@
     "accuracy = model.accuracy()\n",
     "print(f'Prediction: {new_y[0]}; Accuracy: {accuracy:.2f}; Precision: {model.precision():.2f};')\n",
     "model.explain_global()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8634e115-9b54-415e-a298-38cc31ff8847",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id='iTAJDR5WOFFUE018U8HP3'>\n",
+       "<div style='color: #900; text-align: center;'>\n",
+       "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
+       "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
+       "  user you must also trust this notebook (File -> Trust notebook). If you are viewing\n",
+       "  this notebook on github the Javascript has been stripped for security. If you are using\n",
+       "  JupyterLab this error is because a JupyterLab extension has not yet been written.\n",
+       "</div></div>\n",
+       " <script>\n",
+       "   if (window.SHAP) SHAP.ReactDom.render(\n",
+       "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 0.196875, \"outValue\": 0.19687500000000008, \"link\": \"identity\", \"featureNames\": [\"Feature 1\", \"Feature 2\", \"Feature 3\", \"Feature 4\", \"Feature 5\"], \"features\": {\"0\": {\"effect\": 0.10487766350015924, \"value\": 0.0}, \"1\": {\"effect\": 0.0344919056817292, \"value\": 1.0}, \"2\": {\"effect\": -0.15719805822632552, \"value\": 0.5}, \"3\": {\"effect\": 0.21419808164384782, \"value\": 2.0}, \"4\": {\"effect\": -0.19636959259941067, \"value\": 0.3}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
+       "    document.getElementById('iTAJDR5WOFFUE018U8HP3')\n",
+       "  );\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<shap.plots._force.AdditiveForceVisualizer at 0x28593eae860>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shap.force_plot(model.explainer.expected_value[0], model.calculate_shap(new_x)[0][0], new_x[0], feature_names=[f\"Feature {i+1}\" for i in range(new_x.shape[1])])"
    ]
   },
   {
@@ -526,6 +680,44 @@
     "accuracy = model.accuracy()\n",
     "print(f'Prediction: {new_y[0]}; Accuracy: {accuracy:.2f}; Precision: {model.precision():.2f};')\n",
     "model.explain_global()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a52d452d-8103-4fbd-aef7-3de51776d4ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id='iYOQJH0GEIRJJ28CJDVW9'>\n",
+       "<div style='color: #900; text-align: center;'>\n",
+       "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
+       "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
+       "  user you must also trust this notebook (File -> Trust notebook). If you are viewing\n",
+       "  this notebook on github the Javascript has been stripped for security. If you are using\n",
+       "  JupyterLab this error is because a JupyterLab extension has not yet been written.\n",
+       "</div></div>\n",
+       " <script>\n",
+       "   if (window.SHAP) SHAP.ReactDom.render(\n",
+       "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 0.196875, \"outValue\": 0.19687500000000008, \"link\": \"identity\", \"featureNames\": [\"Feature 1\", \"Feature 2\", \"Feature 3\", \"Feature 4\", \"Feature 5\"], \"features\": {\"0\": {\"effect\": 0.10487766350015924, \"value\": 0.0}, \"1\": {\"effect\": 0.0344919056817292, \"value\": 1.0}, \"2\": {\"effect\": -0.15719805822632552, \"value\": 0.5}, \"3\": {\"effect\": 0.21419808164384782, \"value\": 2.0}, \"4\": {\"effect\": -0.19636959259941067, \"value\": 0.3}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
+       "    document.getElementById('iYOQJH0GEIRJJ28CJDVW9')\n",
+       "  );\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<shap.plots._force.AdditiveForceVisualizer at 0x28593eaf4c0>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shap.force_plot(model.explainer.expected_value[0], model.calculate_shap(new_x)[0][0], new_x[0], feature_names=[f\"Feature {i+1}\" for i in range(new_x.shape[1])])"
    ]
   },
   {
