added clustering algorithm class with its metrics

--- a/Classification/Classifications.ipynb
+++ b/Classification/Classifications.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "e8cb1af5-5046-4a8e-b482-1d56df6c1d52",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "084faed3-eccc-441e-982a-00740e4b40a0",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "25e10318-7a7c-4b34-8ba7-a444b2f2c2ba",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "89f16d6d-edb1-43c2-9c39-47634ddad88d",
    "metadata": {},
    "outputs": [
@@ -105,25 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "07e5cc5e-723c-4005-90f1-56c722691b6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\" The models inside the dictionary datatype or a key-value pair data structure \"\"\"\n",
+    "random_state=42\n",
     "MODELS_DICT = {\n",
-    "    \"dt\": DecisionTreeClassifier(random_state=42),      \n",
-    "    \"lr\": LogisticRegression(random_state=42),          \n",
-    "    \"rf\": RandomForestClassifier(random_state=42),      \n",
-    "    \"hgb\": HistGradientBoostingClassifier(random_state=42), \n",
-    "    \"mlp\": MLPClassifier(random_state=42, max_iter=5000, solver='adam'),    \n",
+    "    \"dt\": DecisionTreeClassifier(random_state=random_state),      \n",
+    "    \"lr\": LogisticRegression(random_state=random_state),          \n",
+    "    \"rf\": RandomForestClassifier(random_state=random_state),      \n",
+    "    \"hgb\": HistGradientBoostingClassifier(random_state=random_state), \n",
+    "    \"mlp\": MLPClassifier(random_state=random_state, max_iter=5000, solver='adam'),    \n",
     "    \"svc\": SVC(random_state=42, probability=True)                         \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "c89c8227-7c2a-4945-b548-1e9bbc06ab4d",
    "metadata": {},
    "outputs": [],
@@ -131,7 +132,7 @@
     "\"\"\" The class for the model \"\"\"\n",
     "class Model:\n",
     "    \"\"\" Explainer: 'tree'=TreeExplainer; 'kernel'=KernelExplainer \"\"\"\n",
-    "    def __init__(self, data_X, data_y, model, explainer='tree', test_size=0.2, random_state=42):\n",
+    "    def __init__(self, data_X, data_y, model, explainer='tree', test_size=0.2, random_state=random_state):\n",
     "        # print(data_X.shape)\n",
     "        self.X_train, self.X_test, self.y_train, self.y_test = train_test_split(data_X, data_y, test_size=test_size, random_state=random_state)\n",
     "        self.model = model\n",
