classes were made better

--- a/MachineLearning/Clustering.ipynb
+++ b/MachineLearning/Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "id": "c5094f04-46e1-439a-b071-19dd7025d20a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "id": "c3f8dfa1-2437-4e3f-911f-157996e412b7",
    "metadata": {},
    "outputs": [],
@@ -43,40 +43,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "id": "8967731c-2aff-4260-ac59-e6cef2febff1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' The clustering algorithm and metrics score inside the dictionary datatype or a key-value pair data structure '"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" The clustering algorithm and metrics score inside the dictionary datatype or a key-value pair data structure \"\"\"\n",
     "#clusters\n",
-    "CLUSTERS_DICT = {\n",
-    "    'kmeans': KMeans,\n",
-    "    'spectral': SpectralClustering,\n",
-    "    'hierarchical': AgglomerativeClustering,\n",
-    "    'agglomerative': AgglomerativeClustering,\n",
-    "    'gaussian': GaussianMixture\n",
-    "}\n",
-    "\n",
-    "# Metrics\n",
-    "METRICS_DICT = {\n",
-    "    'silhouette': silhouette_score,\n",
-    "    'davies': davies_bouldin_score,\n",
-    "    'calinski': calinski_harabasz_score\n",
-    "}"
+    "# CLUSTERS_DICT = {\n",
+    "#     'kmeans': KMeans,\n",
+    "#     'spectral': SpectralClustering,\n",
+    "#     'hierarchical': AgglomerativeClustering,\n",
+    "#     'agglomerative': AgglomerativeClustering,\n",
+    "#     'gaussian': GaussianMixture\n",
+    "# }\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "id": "758326e5-6f0a-4eb1-b2b5-0e0bc378d974",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Clustering:\n",
-    "    def __init__(self, X, cluster_algo, random_state=42):\n",
+    "    \"\"\" The clustering algorithm inside the dictionary datatype or a key-value pair data structure \"\"\"\n",
+    "    # Clustering Algorithm Dictionary\n",
+    "    CLUSTERS_DICT = {\n",
+    "        'kmeans': lambda k, random_state: KMeans(n_clusters=k, random_state=random_state),\n",
+    "        'spectral': lambda k, random_state: SpectralClustering(n_clusters=k, random_state=random_state, affinity='nearest_neighbors'),\n",
+    "        'hierarchical': lambda k, random_state: AgglomerativeClustering(n_clusters=k, linkage='ward'),\n",
+    "        'agglomerative': lambda k, random_state: AgglomerativeClustering(n_clusters=k),\n",
+    "        'gaussian': lambda k, random_state: GaussianMixture(n_components=k, random_state=random_state),\n",
+    "    }\n",
+    "    \n",
+    "    # Metrics\n",
+    "    METRICS_DICT = {\n",
+    "        'silhouette': silhouette_score,\n",
+    "        'davies': davies_bouldin_score,\n",
+    "        'calinski': calinski_harabasz_score\n",
+    "    }\n",
+    "    def __init__(self, X, model, random_state=42):\n",
     "        self.X = X\n",
-    "        self.cluster_algo = cluster_algo # This is a reference of a clustering algorithm\n",
+    "        self.cluster_algo = model # Cluster algorithm name in string\n",
     "        self.metric_best_score = None\n",
     "        self.metric_scores = None\n",
     "        self.random_state=random_state\n",
@@ -88,13 +109,13 @@
     "\n",
     "    def _compute_n(self, cluster_algo, metric, max_range):\n",
     "        self.metric_scores = []\n",
-    "        best_score = float('-inf') if metric != \"davies_bouldin\" else float('inf')\n",
+    "        best_score = float('-inf') if metric != 'davies' else float('inf')\n",
     "        best_n_cluster = None\n",
     "        for k in range(2, max_range+1):\n",
     "            y_labels = self._create_cluster_instance_fit_predict(k)\n",
-    "            score = silhouette_score(self.X, y_labels)\n",
+    "            score = METRICS_DICT[metric](self.X, y_labels) # metric(self.X, y_labels)\n",
     "            self.metric_scores.append(score)\n",
-    "            if (metric == \"davies_bouldin\" and score < best_score) or (metric != \"davies_bouldin\" and score > best_score):\n",
+    "            if (metric == 'davies' and score < best_score) or (metric != 'davies' and score > best_score):\n",
     "                best_score = score\n",
     "                best_n_cluster = k      \n",
     "        # if metric==davies_bouldin_score:\n",
@@ -102,42 +123,17 @@
     "        return best_n_cluster, best_score\n",
     "        \n",
     "    def _create_cluster_instance_fit_predict(self, k):\n",
-    "        # KMeans\n",
-    "        if self.cluster_algo == KMeans:\n",
-    "            cluster = self.cluster_algo(n_clusters=k, random_state=self.random_state)\n",
-    "            y_labels = cluster.fit_predict(self.X)\n",
-    "    \n",
-    "        # SpectralClustering\n",
-    "        elif self/cluster_algo == SpectralClustering:\n",
-    "            cluster = self.cluster_algo(n_clusters=k, random_state=self.random_state, affinity='nearest_neighbors')\n",
-    "            y_labels = cluster.fit_predict(self.X)\n",
-    "    \n",
-    "        # Ward Hierarchical Clustering\n",
-    "        # Agglomerative Clustering is a specific type of Hierarchical Clustering and use the linkage ward\n",
-    "        elif self.cluster_algo == AgglomerativeClustering:\n",
-    "            cluster = self.cluster_algo(n_clusters=k, random_state=self.random_state, linkage='ward')\n",
-    "            y_labels = cluster.fit_predict(self.X)\n",
-    "             \n",
-    "        # # AgglomerativeClustering\n",
-    "        # elif self.cluster_algo == AgglomerativeClustering:\n",
-    "        #     cluster = self.cluster_algo(n_clusters=k)\n",
-    "        #     y_labels = cluster.fit_predict(self.X)\n",
-    "    \n",
-    "        # GaussianMixture\n",
-    "        elif self.cluster_algo == GaussianMixture:\n",
-    "            cluster = self.cluster_algo(n_components=k, random_state=self.random_state)\n",
-    "            cluster.fit(self.X)\n",
-    "            y_labels = cluster.predict(self.X)\n",
-    "    \n",
-    "        # Handle unknown clustering algorithms\n",
-    "        else:\n",
-    "            raise ValueError(f\"Unsupported clustering algorithm: {cluster_algo}\")\n",
-    "        return y_labels"
+    "        cluster_instance = CLUSTERS_DICT[self.cluster_algo](k, self.random_state)\n",
+    "        # Handle different fit and predict methods\n",
+    "        if hasattr(cluster_instance, 'fit_predict'):\n",
+    "            return cluster_instance.fit_predict(self.X)\n",
+    "        cluster_instance.fit(self.X)\n",
+    "        return cluster_instance.predict(self.X)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "id": "12bfd9ba-a87e-4810-8d24-b9b3fefcad9a",
    "metadata": {},
    "outputs": [
@@ -175,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "id": "d3637dbc-2d47-4f29-a907-d45a78692951",
    "metadata": {},
    "outputs": [
@@ -183,37 +179,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of best cluster: 3; Best Score: 0.7718348236319091;\n"
+      "Number of best cluster: 3; Best Score: 6081.258040738072;\n"
      ]
     }
    ],
    "source": [
-    "kmeans = Clustering(X, CLUSTERS_DICT['kmeans'])\n",
-    "n_cluster, best_score = kmeans.find_n_cluster(METRICS_DICT['silhouette'])\n",
+    "kmeans = Clustering(X, model='kmeans')\n",
+    "n_cluster, best_score = kmeans.find_n_cluster('calinski')\n",
     "print(f'Number of best cluster: {n_cluster}; Best Score: {best_score};')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "id": "e7d528c4-0f18-4d2d-ae05-b3d37daeb3c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[np.float64(0.7422772235562364),\n",
-       " np.float64(0.7718348236319091),\n",
-       " np.float64(0.5790579710600725),\n",
-       " np.float64(0.3904968274566857),\n",
-       " np.float64(0.15392219409234362),\n",
-       " np.float64(0.15249154274279758),\n",
-       " np.float64(0.15143073182593317),\n",
-       " np.float64(0.15517915916121405),\n",
-       " np.float64(0.14892206257592097)]"
+       "[np.float64(2076.4559971806098),\n",
+       " np.float64(6081.258040738072),\n",
+       " np.float64(4298.046882697102),\n",
+       " np.float64(3413.693887987223),\n",
+       " np.float64(2900.0087912909457),\n",
+       " np.float64(2521.9127130045244),\n",
+       " np.float64(2250.1230295081605),\n",
+       " np.float64(2070.279820347787),\n",
+       " np.float64(1925.3857330307542)]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
